Fix #3 et modif settings.gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,4 @@
  * Normalement, seul le nom du projet doit apparaître ici.
  */
 
-rootProject.name = 'projet-2022-2023'
+rootProject.name = 'projet-2022-2023-b-1'
